[workspace]
members = ["puckette"]
resolver = "2"

[workspace.dependencies]
bytes = "1"
cpal = "0.15"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
